src/gen/proyectoParser.java
// Generated from .idea/grammar/proyecto.g4 by ANTLR 4.13.2

    package gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class proyectoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORTAR=1, VARIABLE=2, EN=3, FUNCION=4, FINFUNCION=5, RETORNAR=6, FIN=7,
		TAREA=8, EJECUTAR=9, SI=10, ENTONCES=11, SINO=12, FINSI=13, MIENTRAS=14,
		FINMIENTRAS=15, PARA=16, CADA=17, FINPARA=18, INTENTAR=19, CAPTURAR=20,
		FININTENTAR=21, SIMULAR=22, CREAR=23, LEER=24, ESCRIBIR=25, ANEXAR=26,
		BUSCAR=27, LISTAR=28, ELIMINAR=29, MOVER=30, COPIAR=31, RENOMBRAR=32,
		OBTENER=33, EXISTE=34, CAMBIAR=35, TAMANO=36, CANTIDAD=37, ARCHIVO=38,
		ARCHIVOS=39, CARPETA=40, CARPETAS=41, CONTENIDO=42, BACKUP=43, COMPRESION=44,
		COMPRIMIR=45, DESCOMPRIMIR=46, PROPIEDAD=47, PERMISOS=48, CON=49, DE=50,
		A=51, EXTENSION=52, NOMBRE=53, PREFIJO=54, SUFIJO=55, MAYOR=56, MENOR=57,
		ANTIGUOS=58, RECIENTES=59, QUE=60, RECURSIVAMENTE=61, SIN=62, CONFIRMAR=63,
		AL=64, INICIAR=65, SISTEMA=66, LAS=67, IR=68, RUTA=69, HORAS=70, MINUTOS=71,
		DIAS=72, BYTES=73, KB=74, MB=75, GB=76, POWERSHELL=77, LINUX=78, MOSTRAR=79,
		VERDADERO=80, FALSO=81, AND=82, OR=83, NOT=84, IGUAL=85, IGUAL_IGUAL=86,
		DIFERENTE=87, MAYOR_QUE=88, MENOR_QUE=89, MAYOR_IGUAL=90, MENOR_IGUAL=91,
		MAS=92, MENOS=93, MULT=94, DIV=95, MOD=96, PAR_IZQ=97, PAR_DER=98, CORCH_IZQ=99,
		CORCH_DER=100, COMA=101, DOS_PUNTOS=102, ID=103, ENTERO=104, DECIMAL=105,
		STRING=106, WS=107, COMENTARIO=108;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_importar = 2, RULE_cambiarDirectorio = 3,
		RULE_mostrarRuta = 4, RULE_declaracionVariable = 5, RULE_asignacionVariable = 6,
		RULE_funcion = 7, RULE_parametros = 8, RULE_llamadaFuncion = 9, RULE_argumentos = 10,
		RULE_retornar = 11, RULE_tarea = 12, RULE_ejecutarTarea = 13, RULE_programacion = 14,
		RULE_tiempo = 15, RULE_condicion = 16, RULE_cicloMientras = 17, RULE_cicloParaCada = 18,
		RULE_intentarCapturar = 19, RULE_bloque = 20, RULE_simulacion = 21, RULE_comandoSistema = 22,
		RULE_ejecutarPowerShell = 23, RULE_ejecutarLinux = 24, RULE_accionArchivo = 25,
		RULE_crearArchivo = 26, RULE_crearCarpeta = 27, RULE_leerArchivo = 28,
		RULE_buscarArchivos = 29, RULE_buscarCarpetas = 30, RULE_listarContenido = 31,
		RULE_existeArchivo = 32, RULE_existeCarpeta = 33, RULE_obtenerTamano = 34,
		RULE_obtenerCantidadArchivos = 35, RULE_obtenerPropiedad = 36, RULE_copiarArchivo = 37,
		RULE_copiarCarpeta = 38, RULE_moverArchivo = 39, RULE_moverCarpeta = 40,
		RULE_renombrarArchivo = 41, RULE_renombrarCarpeta = 42, RULE_escribirArchivo = 43,
		RULE_anexarArchivo = 44, RULE_cambiarPermisos = 45, RULE_eliminarArchivo = 46,
		RULE_eliminarCarpeta = 47, RULE_sinConfirmar = 48, RULE_comprimir = 49,
		RULE_descomprimir = 50, RULE_crearBackup = 51, RULE_filtros = 52, RULE_filtro = 53,
		RULE_unidadTamano = 54, RULE_mostrar = 55, RULE_expresion = 56, RULE_lista = 57,
		RULE_variable = 58, RULE_numero = 59, RULE_cadena = 60, RULE_booleano = 61;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "importar", "cambiarDirectorio", "mostrarRuta",
			"declaracionVariable", "asignacionVariable", "funcion", "parametros",
			"llamadaFuncion", "argumentos", "retornar", "tarea", "ejecutarTarea",
			"programacion", "tiempo", "condicion", "cicloMientras", "cicloParaCada",
			"intentarCapturar", "bloque", "simulacion", "comandoSistema", "ejecutarPowerShell",
			"ejecutarLinux", "accionArchivo", "crearArchivo", "crearCarpeta", "leerArchivo",
			"buscarArchivos", "buscarCarpetas", "listarContenido", "existeArchivo",
			"existeCarpeta", "obtenerTamano", "obtenerCantidadArchivos", "obtenerPropiedad",
			"copiarArchivo", "copiarCarpeta", "moverArchivo", "moverCarpeta", "renombrarArchivo",
			"renombrarCarpeta", "escribirArchivo", "anexarArchivo", "cambiarPermisos",
			"eliminarArchivo", "eliminarCarpeta", "sinConfirmar", "comprimir", "descomprimir",
			"crearBackup", "filtros", "filtro", "unidadTamano", "mostrar", "expresion",
			"lista", "variable", "numero", "cadena", "booleano"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Importar'", "'Variable'", "'En'", "'Funcion'", "'FinFuncion'",
			"'Retornar'", "'Fin'", "'Tarea'", "'Ejecutar'", "'Si'", "'Entonces'",
			"'Sino'", "'FinSi'", "'Mientras'", "'FinMientras'", "'Para'", "'Cada'",
			"'FinPara'", "'Intentar'", "'Capturar'", "'FinIntentar'", "'Simular'",
			"'Crear'", "'Leer'", "'Escribir'", "'Anexar'", "'Buscar'", "'Listar'",
			"'Eliminar'", "'Mover'", "'Copiar'", "'Renombrar'", "'Obtener'", "'Existe'",
			"'Cambiar'", "'Tamano'", "'Cantidad'", "'Archivo'", "'Archivos'", "'Carpeta'",
			"'Carpetas'", "'Contenido'", "'Backup'", "'Compresion'", "'Comprimir'",
			"'Descomprimir'", "'Propiedad'", "'Permisos'", "'Con'", "'De'", "'A'",
			"'Extension'", "'Nombre'", "'Prefijo'", "'Sufijo'", "'Mayor'", "'Menor'",
			"'Antiguos'", "'Recientes'", "'Que'", "'Recursivamente'", "'Sin'", "'Confirmar'",
			"'Al'", "'Iniciar'", "'Sistema'", "'Las'", "'Ir'", "'Ruta'", "'Horas'",
			"'Minutos'", "'Dias'", "'Bytes'", "'KB'", "'MB'", "'GB'", "'PowerShell'",
			"'Linux'", "'Mostrar'", "'Verdadero'", "'Falso'", "'Y'", "'O'", "'No'",
			"'='", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", null, null, null,
			null, null, "'('", "')'", "'['", "']'", "','", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORTAR", "VARIABLE", "EN", "FUNCION", "FINFUNCION", "RETORNAR",
			"FIN", "TAREA", "EJECUTAR", "SI", "ENTONCES", "SINO", "FINSI", "MIENTRAS",
			"FINMIENTRAS", "PARA", "CADA", "FINPARA", "INTENTAR", "CAPTURAR", "FININTENTAR",
			"SIMULAR", "CREAR", "LEER", "ESCRIBIR", "ANEXAR", "BUSCAR", "LISTAR",
			"ELIMINAR", "MOVER", "COPIAR", "RENOMBRAR", "OBTENER", "EXISTE", "CAMBIAR",
			"TAMANO", "CANTIDAD", "ARCHIVO", "ARCHIVOS", "CARPETA", "CARPETAS", "CONTENIDO",
			"BACKUP", "COMPRESION", "COMPRIMIR", "DESCOMPRIMIR", "PROPIEDAD", "PERMISOS",
			"CON", "DE", "A", "EXTENSION", "NOMBRE", "PREFIJO", "SUFIJO", "MAYOR",
			"MENOR", "ANTIGUOS", "RECIENTES", "QUE", "RECURSIVAMENTE", "SIN", "CONFIRMAR",
			"AL", "INICIAR", "SISTEMA", "LAS", "IR", "RUTA", "HORAS", "MINUTOS",
			"DIAS", "BYTES", "KB", "MB", "GB", "POWERSHELL", "LINUX", "MOSTRAR",
			"VERDADERO", "FALSO", "AND", "OR", "NOT", "IGUAL", "IGUAL_IGUAL", "DIFERENTE",
			"MAYOR_QUE", "MENOR_QUE", "MAYOR_IGUAL", "MENOR_IGUAL", "MAS", "MENOS",
			"MULT", "DIV", "MOD", "PAR_IZQ", "PAR_DER", "CORCH_IZQ", "CORCH_DER",
			"COMA", "DOS_PUNTOS", "ID", "ENTERO", "DECIMAL", "STRING", "WS", "COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "proyecto.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public proyectoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(proyectoParser.EOF, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 105621832157014L) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & 518114064385L) != 0)) {
				{
				{
				setState(124);
				sentencia();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public AsignacionVariableContext asignacionVariable() {
			return getRuleContext(AsignacionVariableContext.class,0);
		}
		public MostrarRutaContext mostrarRuta() {
			return getRuleContext(MostrarRutaContext.class,0);
		}
		public CambiarDirectorioContext cambiarDirectorio() {
			return getRuleContext(CambiarDirectorioContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public CicloMientrasContext cicloMientras() {
			return getRuleContext(CicloMientrasContext.class,0);
		}
		public CicloParaCadaContext cicloParaCada() {
			return getRuleContext(CicloParaCadaContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public LlamadaFuncionContext llamadaFuncion() {
			return getRuleContext(LlamadaFuncionContext.class,0);
		}
		public RetornarContext retornar() {
			return getRuleContext(RetornarContext.class,0);
		}
		public TareaContext tarea() {
			return getRuleContext(TareaContext.class,0);
		}
		public EjecutarTareaContext ejecutarTarea() {
			return getRuleContext(EjecutarTareaContext.class,0);
		}
		public ProgramacionContext programacion() {
			return getRuleContext(ProgramacionContext.class,0);
		}
		public ComandoSistemaContext comandoSistema() {
			return getRuleContext(ComandoSistemaContext.class,0);
		}
		public SimulacionContext simulacion() {
			return getRuleContext(SimulacionContext.class,0);
		}
		public IntentarCapturarContext intentarCapturar() {
			return getRuleContext(IntentarCapturarContext.class,0);
		}
		public ImportarContext importar() {
			return getRuleContext(ImportarContext.class,0);
		}
		public AccionArchivoContext accionArchivo() {
			return getRuleContext(AccionArchivoContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				declaracionVariable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				asignacionVariable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				mostrarRuta();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				cambiarDirectorio();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(136);
				mostrar();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(137);
				condicion();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(138);
				cicloMientras();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(139);
				cicloParaCada();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(140);
				funcion();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(141);
				llamadaFuncion();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(142);
				retornar();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(143);
				tarea();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(144);
				ejecutarTarea();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(145);
				programacion();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(146);
				comandoSistema();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(147);
				simulacion();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(148);
				intentarCapturar();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(149);
				importar();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(150);
				accionArchivo();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(151);
				expresion(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportarContext extends ParserRuleContext {
		public TerminalNode IMPORTAR() { return getToken(proyectoParser.IMPORTAR, 0); }
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public ImportarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterImportar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitImportar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitImportar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportarContext importar() throws RecognitionException {
		ImportarContext _localctx = new ImportarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(IMPORTAR);
			setState(155);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
